--- a/our_demo/poke_api/package.json
+++ b/our_demo/poke_api/package.json
@@ -15,6 +15,8 @@
     "dotenv-cli": "^7.2.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
+    "sequelize": "^6.31.1",
+    "sequelize-cli": "^6.6.0",
     "sqlite3": "^5.1.6"
   }
 }
